[gd_scene load_steps=2 format=3 uid="uid://i01i01i01i01i01i01i01i01i01i01i01"]

[ext_resource type="Script" path="res://addons/AudioCafe/panel/interactive_editor.gd" id="1_interactive_editor"]

[node name="InteractiveEditor" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
script = ExtResource("1_interactive_editor")

[node name="ResourceNameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Interactive Name"
vertical_alignment = 1

[node name="EditButton" type="Button" parent="."]
layout_mode = 2
text = "Editar"
